--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,21 +3,21 @@
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 100;
-	src: url('public/assets/fonts/montserrat/montserrat-v24-latin-100.eot'); /* IE9 Compat Modes */
+	src: url('../public/assets/fonts/montserrat/montserrat-v24-latin-100.eot'); /* IE9 Compat Modes */
 	src: local(''),
-		url('public/assets/fonts/montserrat/montserrat-v24-latin-100.eot?#iefix')
+		url('../public/assets/fonts/montserrat/montserrat-v24-latin-100.eot?#iefix')
 			format('embedded-opentype'),
 		/* IE6-IE8 */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-100.woff2')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-100.woff2')
 			format('woff2'),
 		/* Super Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-100.woff')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-100.woff')
 			format('woff'),
 		/* Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-100.ttf')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-100.ttf')
 			format('truetype'),
 		/* Safari, Android, iOS */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-100.svg#Montserrat')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-100.svg#Montserrat')
 			format('svg'); /* Legacy iOS */
 }
 /* montserrat-200 - latin */
@@ -25,21 +25,21 @@
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 200;
-	src: url('public/assets/fonts/montserrat/montserrat-v24-latin-200.eot'); /* IE9 Compat Modes */
+	src: url('../public/assets/fonts/montserrat/montserrat-v24-latin-200.eot'); /* IE9 Compat Modes */
 	src: local(''),
-		url('public/assets/fonts/montserrat/montserrat-v24-latin-200.eot?#iefix')
+		url('../public/assets/fonts/montserrat/montserrat-v24-latin-200.eot?#iefix')
 			format('embedded-opentype'),
 		/* IE6-IE8 */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-200.woff2')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-200.woff2')
 			format('woff2'),
 		/* Super Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-200.woff')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-200.woff')
 			format('woff'),
 		/* Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-200.ttf')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-200.ttf')
 			format('truetype'),
 		/* Safari, Android, iOS */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-200.svg#Montserrat')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-200.svg#Montserrat')
 			format('svg'); /* Legacy iOS */
 }
 /* montserrat-300 - latin */
@@ -47,21 +47,21 @@
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 300;
-	src: url('public/assets/fonts/montserrat/montserrat-v24-latin-300.eot'); /* IE9 Compat Modes */
+	src: url('../public/assets/fonts/montserrat/montserrat-v24-latin-300.eot'); /* IE9 Compat Modes */
 	src: local(''),
-		url('public/assets/fonts/montserrat/montserrat-v24-latin-300.eot?#iefix')
+		url('../public/assets/fonts/montserrat/montserrat-v24-latin-300.eot?#iefix')
 			format('embedded-opentype'),
 		/* IE6-IE8 */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-300.woff2')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-300.woff2')
 			format('woff2'),
 		/* Super Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-300.woff')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-300.woff')
 			format('woff'),
 		/* Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-300.ttf')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-300.ttf')
 			format('truetype'),
 		/* Safari, Android, iOS */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-300.svg#Montserrat')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-300.svg#Montserrat')
 			format('svg'); /* Legacy iOS */
 }
 /* montserrat-regular - latin */
@@ -69,21 +69,21 @@
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 400;
-	src: url('public/assets/fonts/montserrat/montserrat-v24-latin-regular.eot'); /* IE9 Compat Modes */
+	src: url('../public/assets/fonts/montserrat/montserrat-v24-latin-regular.eot'); /* IE9 Compat Modes */
 	src: local(''),
-		url('public/assets/fonts/montserrat/montserrat-v24-latin-regular.eot?#iefix')
+		url('../public/assets/fonts/montserrat/montserrat-v24-latin-regular.eot?#iefix')
 			format('embedded-opentype'),
 		/* IE6-IE8 */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-regular.woff2')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-regular.woff2')
 			format('woff2'),
 		/* Super Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-regular.woff')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-regular.woff')
 			format('woff'),
 		/* Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-regular.ttf')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-regular.ttf')
 			format('truetype'),
 		/* Safari, Android, iOS */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-regular.svg#Montserrat')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-regular.svg#Montserrat')
 			format('svg'); /* Legacy iOS */
 }
 /* montserrat-500 - latin */
@@ -91,21 +91,21 @@
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 500;
-	src: url('public/assets/fonts/montserrat/montserrat-v24-latin-500.eot'); /* IE9 Compat Modes */
+	src: url('../public/assets/fonts/montserrat/montserrat-v24-latin-500.eot'); /* IE9 Compat Modes */
 	src: local(''),
-		url('public/assets/fonts/montserrat/montserrat-v24-latin-500.eot?#iefix')
+		url('../public/assets/fonts/montserrat/montserrat-v24-latin-500.eot?#iefix')
 			format('embedded-opentype'),
 		/* IE6-IE8 */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-500.woff2')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-500.woff2')
 			format('woff2'),
 		/* Super Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-500.woff')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-500.woff')
 			format('woff'),
 		/* Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-500.ttf')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-500.ttf')
 			format('truetype'),
 		/* Safari, Android, iOS */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-500.svg#Montserrat')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-500.svg#Montserrat')
 			format('svg'); /* Legacy iOS */
 }
 /* montserrat-600 - latin */
@@ -113,21 +113,21 @@
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
-	src: url('public/assets/fonts/montserrat/montserrat-v24-latin-600.eot'); /* IE9 Compat Modes */
+	src: url('../public/assets/fonts/montserrat/montserrat-v24-latin-600.eot'); /* IE9 Compat Modes */
 	src: local(''),
-		url('public/assets/fonts/montserrat/montserrat-v24-latin-600.eot?#iefix')
+		url('../public/assets/fonts/montserrat/montserrat-v24-latin-600.eot?#iefix')
 			format('embedded-opentype'),
 		/* IE6-IE8 */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-600.woff2')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-600.woff2')
 			format('woff2'),
 		/* Super Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-600.woff')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-600.woff')
 			format('woff'),
 		/* Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-600.ttf')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-600.ttf')
 			format('truetype'),
 		/* Safari, Android, iOS */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-600.svg#Montserrat')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-600.svg#Montserrat')
 			format('svg'); /* Legacy iOS */
 }
 /* montserrat-700 - latin */
@@ -135,21 +135,21 @@
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 700;
-	src: url('public/assets/fonts/montserrat/montserrat-v24-latin-700.eot'); /* IE9 Compat Modes */
+	src: url('../public/assets/fonts/montserrat/montserrat-v24-latin-700.eot'); /* IE9 Compat Modes */
 	src: local(''),
-		url('public/assets/fonts/montserrat/montserrat-v24-latin-700.eot?#iefix')
+		url('../public/assets/fonts/montserrat/montserrat-v24-latin-700.eot?#iefix')
 			format('embedded-opentype'),
 		/* IE6-IE8 */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-700.woff2')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-700.woff2')
 			format('woff2'),
 		/* Super Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-700.woff')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-700.woff')
 			format('woff'),
 		/* Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-700.ttf')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-700.ttf')
 			format('truetype'),
 		/* Safari, Android, iOS */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-700.svg#Montserrat')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-700.svg#Montserrat')
 			format('svg'); /* Legacy iOS */
 }
 /* montserrat-800 - latin */
@@ -157,21 +157,21 @@
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 800;
-	src: url('public/assets/fonts/montserrat/montserrat-v24-latin-800.eot'); /* IE9 Compat Modes */
+	src: url('../public/assets/fonts/montserrat/montserrat-v24-latin-800.eot'); /* IE9 Compat Modes */
 	src: local(''),
-		url('public/assets/fonts/montserrat/montserrat-v24-latin-800.eot?#iefix')
+		url('../public/assets/fonts/montserrat/montserrat-v24-latin-800.eot?#iefix')
 			format('embedded-opentype'),
 		/* IE6-IE8 */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-800.woff2')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-800.woff2')
 			format('woff2'),
 		/* Super Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-800.woff')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-800.woff')
 			format('woff'),
 		/* Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-800.ttf')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-800.ttf')
 			format('truetype'),
 		/* Safari, Android, iOS */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-800.svg#Montserrat')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-800.svg#Montserrat')
 			format('svg'); /* Legacy iOS */
 }
 /* montserrat-900 - latin */
@@ -179,20 +179,20 @@
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 900;
-	src: url('public/assets/fonts/montserrat/montserrat-v24-latin-900.eot'); /* IE9 Compat Modes */
+	src: url('../public/assets/fonts/montserrat/montserrat-v24-latin-900.eot'); /* IE9 Compat Modes */
 	src: local(''),
-		url('public/assets/fonts/montserrat/montserrat-v24-latin-900.eot?#iefix')
+		url('../public/assets/fonts/montserrat/montserrat-v24-latin-900.eot?#iefix')
 			format('embedded-opentype'),
 		/* IE6-IE8 */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-900.woff2')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-900.woff2')
 			format('woff2'),
 		/* Super Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-900.woff')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-900.woff')
 			format('woff'),
 		/* Modern Browsers */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-900.ttf')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-900.ttf')
 			format('truetype'),
 		/* Safari, Android, iOS */
-			url('public/assets/fonts/montserrat/montserrat-v24-latin-900.svg#Montserrat')
+			url('../public/assets/fonts/montserrat/montserrat-v24-latin-900.svg#Montserrat')
 			format('svg'); /* Legacy iOS */
 }
