--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,19 @@
 html,
 body {
+	min-height: 100vh;
+}
+
+#__next {
+	height: 100vh;
+	overflow-x: hidden;
+	overflow-y: auto;
+
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+}
+html,
+body {
 	padding: 0;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
